added  adaptive product-page

--- a/app/modules/_user-nav/_user-nav.scss
+++ b/app/modules/_user-nav/_user-nav.scss
@@ -26,6 +26,10 @@
     border-radius: 25px;
     background-color: $bg;
 
+    @include breakpoint($mobile-bp) {
+    margin: 0 15px;
+    }
+
     &::before {
       content: '';
       position: absolute;
