--- a/app/modules/_main-slider/_main-slider.scss
+++ b/app/modules/_main-slider/_main-slider.scss
@@ -10,6 +10,7 @@
     }
   }
 
+
   .slick-slider {
 
     li {
@@ -113,6 +114,7 @@
 
     @include breakpoint($mobile-bp) {
       padding-top: 40px;
+      min-width: auto;
     }
   }
 
