--- a/app/scss/blocks/_product-details.scss
+++ b/app/scss/blocks/_product-details.scss
@@ -5,25 +5,54 @@
     display: flex;
     align-items: center;
     margin-bottom: 73px;
+
+    @include breakpoint($tablet-bp) {
+      display: block;
+      margin-bottom: 30px;
+    }
   }
 
   &__about {
     padding-bottom: 20px;
+
+    @include breakpoint($tablet-bp) {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__sliders {
     display: flex;
-
-  }
-
-  &__sliders {
     width: 550px;
     margin-right: 70px;
+
+    @include breakpoint($tablet-bp) {
+      margin: 0 auto 20px;
+      width: 490px;
+    }
+
+    @include breakpoint($mobile-bp) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__mini {
     width: 140px;
     margin-right: 30px;
+
+    @include breakpoint($tablet-bp) {
+      margin-right: 10px;
+    }
+
+    @include breakpoint($mobile-bp) {
+      width: auto;
+      margin: 0 -5px;
+
+      .slick-slide>div {
+        padding: 0 5px;
+      }
+    }
   }
 
   &__mini-image {
@@ -32,6 +61,10 @@
     margin-bottom: 24px;
 
     cursor: pointer;
+
+    @include breakpoint($mobile-bp) {
+      width: 90px;
+    }
   }
 
   &__mini-image,
@@ -44,6 +77,10 @@
     height: 160px;
     max-height: 100%;
     object-fit: contain;
+
+    @include breakpoint($mobile-bp) {
+      margin: 0 auto;
+    }
   }
 
   .slick-vertical .slick-slide {
@@ -54,32 +91,31 @@
   &__big {
     width: 386px;
     margin-right: 70px;
+
+    @include breakpoint($tablet-bp) {
+      margin-right: 0;
+      width: 340px;
+    }
+
+    @include breakpoint($mobile-bp) {
+      width: auto;
+    }
   }
 
-  &__big-image {
-    height: 530px;
-    // padding: 60px 0;
+  &__big-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 528px;
+
   }
 
   &__big-img {
     max-width: 368px;
-    height: 528px;
-    // height: 100%;
+    height: 428px;
     object-fit: cover;
     margin: 0 auto;
   }
-
-  //   .slick-slide.slick-active {
-  // height: 186px;
-  //   }
-
-
-  // .slick-vertical {
-  //   .slick-list.draggable {
-  //     height: 531px;
-  //   }
-  // }
-
 
   &__title {
     margin-bottom: 20px;
@@ -88,12 +124,20 @@
     font-size: 40px;
     line-height: 1;
     color: darken($title, 20%);
+
+    @include breakpoint($mobile-bp) {
+      font-size: 30px;
+    }
   }
 
   &__star {
     margin-bottom: 34px;
 
     font-size: 0;
+
+    @include breakpoint($desktop-bp) {
+      margin-bottom: 25px;
+    }
   }
 
   &__price {
@@ -102,6 +146,10 @@
     @extend %rubik-400;
     font-size: 30px;
     color: darken($title, 20%);
+
+    @include breakpoint($desktop-bp) {
+      margin-bottom: 20px;
+    }
   }
 
   &__text {
@@ -111,13 +159,36 @@
     color: $title;
     font-size: 16px;
     line-height: 1.9;
+
+    @include breakpoint($desktop-bp) {
+      margin-bottom: 20px;
+    }
   }
 
   &__form {
     margin-bottom: 40px;
+
+
+    @include breakpoint($desktop-bp) {
+      margin-bottom: 20px;
+    }
+
+    @include breakpoint($tablet-bp) {
+      order: 6;
+    }
+
+    &>label {
+      padding: 16px 0;
+    }
   }
 
-  &__teg,
+  &__info {
+
+    @include breakpoint($tablet-bp) {
+      order: 5;
+    }
+  }
+
   &__name,
   &__mark {
     @extend %rubik-400;
@@ -125,17 +196,28 @@
     line-height: 1.8;
     color: $title;
     transition: color 0.3s linear;
-  }
 
-  &__teg {
+    a {
+      color: inherit;
 
-    &:hover {
-      color: $accent;
+      &:hover {
+        color: $accent;
+      }
     }
   }
 
   &__label {
     margin-right: 15px;
+
+    @include breakpoint($tablet-bp) {
+      display: inline-block;
+      margin-right: 20px;
+    }
+
+    @include breakpoint($mobile-bp) {
+      display: block;
+      margin-bottom: 20px;
+    }
   }
 
   &__btn {
@@ -151,6 +233,11 @@
     transition: text-shadow 0.3s linear,
       background-color 0.3s linear,
       color 0.3s linear;
+
+    @include breakpoint($mobile-bp) {
+      display: block;
+      width: 100%;
+    }
 
     &:hover {
       text-shadow: 0 0 1px $title;
@@ -171,6 +258,14 @@
     width: 150px;
 
     cursor: pointer;
+
+    @include breakpoint($desktop-bp) {
+      margin-bottom: 20px;
+    }
+
+    @include breakpoint($tablet-bp) {
+      margin-bottom: 0;
+    }
 
     &.focused {
       box-shadow: 0px 1px 1px $bg;
@@ -270,5 +365,4 @@
   .jq-number.focused .jq-number__field {
     border: none;
   }
-
 }
